# cardputer-ai

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE.md  README.md  cardputer_ai.ino  llm.cpp  llm.h  platformio.ini  sdkconfig.defaults  tok_data.cpp
.cache/clangd/index/: AK8963_Class.cpp.EF104AAAF4D21BB3.idx  AK8963_Class.hpp.C55D49B0EE6D47F8.idx  AW32001_Class.cpp.F422D0368CA0858A.idx  AW32001_Class.hpp.8A61E70E8A5F6741.idx  AXP192_Class.cpp.4F0FD5624E56341E.idx  AXP192_Class.hpp.9303D3DE65078E8F.idx  AXP2101_Class.cpp.2EA7ACF6BAB5699E.idx  AXP2101_Class.hpp.D2AAB0C776E068AE.idx  Adafruit_TCA8418.cpp.F216350E12E55F78.idx  Adafruit_TCA8418.h.FE8EBA77E87FFE40.idx  Adafruit_TCA8418_registers.h.8F1FF6D91B816633.idx  Ascii24x48.h.CF1B87E4E158B087.idx  Ascii8x16.h.E2D244FEE6833D11.idx  BMI270_Class.cpp.26A69D96C7279574.idx  Bus.hpp.3D468C27D9F78A97.idx  (+272 more)
data/: chat_val.txt  meta.json
data/brainrot/: chat_train.txt  chat_val.txt  meta.json
data/brainrot_model/: tokenizer_config.json
data/chat_model/: config.json  generation_config.json
main/: CMakeLists.txt  idf_component.yml  llm.cpp  llm.h  main.cpp  port.h  tok_data.cpp  ui.cpp  ui.h
main/keyboard/: Keyboard.cpp  Keyboard.h
main/keyboard/Adafruit_TCA8418/: Adafruit_TCA8418.cpp  Adafruit_TCA8418.h  Adafruit_TCA8418_registers.h
main/keyboard/KeyboardReader/: IOMatrix.cpp  IOMatrix.h  KeyboardReader.h  TCA8418.cpp  TCA8418.h
tools/: convert_tinyllama_v0.py  convert_tinystories_instruct.py  finetune_chat.py  prepare_brainrot_data.py  prepare_chat_data.py
tools/host/: Arduino.h  esp_heap_caps.h  host_test.cpp
(+3 files in other folders)
